[build-system]
requires = [ "setuptools>=41.0.1", "wheel>=0.37.1",]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "purepy", "gitlab", "kitware", "cv2", "gdal"]
mod_name = "kwimage"
author = 'Jon Crall'
author_email = 'jon.crall@kitware.com'
repo_name = "kwimage"
#ci_cpython_versions = ['3.8', '3.9', '3.10', '3.11', '3.12']
min_python = "3.9"
url = 'https://gitlab.kitware.com/computer-vision/kwimage'
dev_status = "beta"
typed = true
render_doc_images = 1
classifiers = [
    "Development Status :: 4 - Beta",
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    # This should be interpreted as Apache License v2.0
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.xcookie.entry_points]
console_scripts = [
    "kwimage = kwimage.cli.__main__:main",
]

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev docs _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "kwimage/__main__.py", "*/setup.py",]
